@@ -3,6 +3,11 @@ h1. CHANGELOG
 h2. 2.2.16 unreleased
 
 * add 'saas' recipe for rails-stripe-membership-saas example app
+* update gem 'devise_invitable' from 1.0.3 to 1.1.1
+* update gem 'bootstrap-sass' from 2.1.0.0 to 2.1.0.1
+* update gem 'twitter-bootstrap-rails' from 2.1.3 to 2.1.4
+* update gem 'slim' from 1.3.2 to 1.3.3
+* update gem 'rspec-rails' from 2.11.0 to 2.11.4
 
 h2. 2.2.15 October 12, 2012
 
@@ -47,8 +52,8 @@ h2. 2.2.10 September 30, 2012
 * fix 'gems' and 'setup' recipes to correct use of google_oauth2 provider for OmniAuth (issue 117)
 * fix 'extras' recipe to check for rvm gem version 1.11.3.5 or newer
 * update gem 'simple_form' from 2.0.2 to 2.0.3
-* update gem 'slim' from 1.3.0 tp 1.3.2
-* update gem 'thin' from 1.4.1 tp 1.5.0
+* update gem 'slim' from 1.3.0 to 1.3.2
+* update gem 'thin' from 1.4.1 to 1.5.0
 * update gem 'jquery-datatables-rails from 1.11.0 to 1.11.1
 * update gem 'zurb-foundation' from 3.0.9 to 3.1.1
 * update gem 'mongoid' from 3.0.5 to 3.0.6
